2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_3, igraph_isomorphic_3)
	(igraph_isoclass_4, igraph_isomorphic_4) : removed
	(igraph_isoclass, igraph_isomorphic) : added
	
2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_3, igraph_isomorphic_3)
	(igraph_isoclass_4, igraph_isomorphic_4) : added

2006-02-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_random_3d, igraph_layout_sphere)
	(igraph_layout_fruchterman_reingold_3d)
	(igraph_layout_kamada_kawai_3d) : added

2006-01-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_add2) : added
	* src/layout.c (igraph_layout_grid_fruchterman_reingold) : added

2006-01-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_reset, igraph_2dgrid_next)
	(igraph_2dgrid_next_nei) : simple grid iterator, added
	* src/layout.c (igraph_layout_lgl) : added root parameter,
	first layer placed equidistantly, corrected maxiter bug,
	speedup by using the grid iterator

	* examples/simple/igraph_layout_lgl.c : updated

2006-01-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_which, igraph_2dgrid_move)
	(igraph_2dgrid_dist, igraph_2dgrid_addvertices) : trivial small
	speedups, inlining
	(igraph_2dgrid_dist2) : squared distance
	* src/layout.c (igraph_layout_lgl) : small improvement on the
	placing of the spheres
	
	* src/layout.c (igraph_layout_fruchterman_reingold) : correct
	division by zero error

2006-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/atlas.c (igraph_atlas) : added
	* src/atlas-edges.h (igraph_i_atlas_edges)
	(igraph_i_atlas_edges_pos) : added
	* examples/simple/igraph_atlas.c : added

2006-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_grid.c (igraph_2dgrid_init) : deltax, deltay
	arguments are real numbers
	(igraph_2dgrid_which) : try to prevent limit cases
	* src/layout.c (igraph_layout_lgl) : updated to use