@@ -56,7 +56,8 @@ export(graph, graph.adjacency, graph.star, graph.tree, graph.lattice,
 # games
 
 export(erdos.renyi.game, random.graph.game, degree.sequence.game,
-       aging.prefatt.game, growing.random.game, barabasi.game)
+       aging.prefatt.game, growing.random.game, barabasi.game,
+       callaway.traits.game)
 
 # community structure
 
