@@ -1,5 +1,10 @@
 2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/games.R (callaway.traits.game) : added
+	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) : added
+
+2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
+
 	* interfaces/R/src/rinterface.c (R_igraph_isoclass_34)
 	(R_igraph_isomorphic_34) : updated
 	
