@@ -1,5 +1,11 @@
 2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* src/vector.c (igraph_vector_binsearch) : modified to find "possible"
+	place of element even if it's not in the vector
+	* src/games.c (igraph_growing_traits_game) : added
+
+2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>
+
 	* src/topology.c (igraph_isoclass_3, igraph_isomorphic_3)
 	(igraph_isoclass_4, igraph_isomorphic_4) : removed
 	(igraph_isoclass, igraph_isomorphic) : added
